2002-12-17  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-utils.c (g_utf8_strcasestr): use strncmp instead of
	memcmp
	(g_utf8_caselessnmatch): ditto
	(lines_match): fix a cut and paste bug

2002-12-16  Paolo Maggi  <paolo.maggi@polito.it>

	* dialogs/gedit-preferences-dialog.c 
	(gedit_preferences_dialog_wrap_lines_chec): s/GTK_WRAP_CHAR/GTK_WRAP_WORD

	* dialogs/gedit-preferences.glade2: fix Print/Page page according to
	ui-review

2002-12-16  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* gedit-print.c: Fixed the word-wrap problem (bug#99273). 
	Character-wrap and wrap-none features kept unaltered.

2002-12-15  Paolo Maggi  <paolo.maggi@polito.it>
	
	* gedit-viewc.c (gedit_view_grab_focus): don't modify GtkTextView 
	readonly field disable_scroll_on_focus

	* dialogs/gedit-dialog-replace.c : escape text before inserting in the 
	search or replace entry
	(insert_text_handler)(escape_search_text): new functions

2002-12-15  Adam Ritter  <adam@xiphias.cjb.net>

	* dialogs/gedit-dialog-replace.c (gedit_dialog_find):
	* dialogs/gedit-dialog-replace.c (gedit_dialog_replace):

	After selecting a word and trying to find/replace
	the selected word is in the corresponding dialog. (Bug #100340)

2002-12-15  Chema Celorio  <chema@celorio.com>

	* gedit-print.c: don't define gnome-print declarations here

2002-12-09  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-mdi-child.c (gedit_mdi_child_real_state_changed):
	s/RO - docname/docname - RO

	* gedit-view.c (gedit_view_update_cursor_position_statusbar): fix 	
	bug #95330 ("Col." status counts characters instead of columns)

	* dialogs/gedit-preferences-dialog.c: the Load category is now 
	called Open

	* dialogs/gedit-preferences.glade2: ui-review related fixes


2002-12-09  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-commands.c:
	* gedit-view.c: 
	* gedit-undo-manager.c: fixed bug #99249 (Undo and redo should move 
	the document display to the part being altered)
	