@@ -1,3 +1,7 @@
+2002-12-25  Christian Neumair  <chris@gnome-de.org>
+
+	* sample/sample.c, email/email.c: Fixed copyright strings.
+
 2002-12-09  Paolo Maggi  <paolo.maggi@polito.it>
 
 	* sort/sort.c:
