@@ -1,3 +1,7 @@
+2002-12-25  Christian Neumair  <chris@gnome-de.org>
+
+	* gedit-commands.c: Revamped about dialog (#101646).
+
 2002-12-17  Paolo Maggi  <paolo.maggi@polito.it>
 
 	* gedit-utils.c (g_utf8_strcasestr): use strncmp instead of
